# pyPhoCoreHelpers

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  environment.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.md  index.rst  requirements.txt
notebooks/: template.ipynb
scripts/: gen_ref_pages.py  train_model.py
src/pyphocorehelpers/: __init__.py  assertion_helpers.py  exception_helpers.py  function_helpers.py  general_helpers.py  geometry_helpers.py  hashing_helpers.py  image_helpers.py  indexing_helpers.py  ipython_helpers.py  notebook_helpers.py  performance_timing_helpers.py  pprint.py  preferences_helpers.py  print_helpers.py  programming_helpers.py  pyqt_ipython_rendering_helpers.py  skeleton.py
src/pyphocorehelpers/DataStructure/: NestedRenderPlots.py  data_structure_builders.py  dynamic_parameters.py  enum_helpers.py  general_parameter_containers.py  logging_data_structures.py
src/pyphocorehelpers/DataStructure/RenderPlots/: MatplotLibRenderPlots.py  PyqtgraphRenderPlots.py
src/pyphocorehelpers/Filesystem/: generate_code_index.py  hdf5_file_helpers.py  metadata_helpers.py  obsidian_canvas_helpers.py  open_in_system_file_manager.py  path_helpers.py  pickling_helpers.py  poetry_helpers.py  source_code_helpers.py  symbolic_link_helpers.py
src/pyphocorehelpers/Filesystem/HDF5/: hdf5_file_helpers.py  silx_hdf5_viewer.py
src/pyphocorehelpers/Resources/Templates/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment  vscode_snippet_template.json.j2
src/pyphocorehelpers/gui/: PhoUIContainer.py  SelectionHelpers_UNUSED.py  interaction_helpers.py
src/pyphocorehelpers/gui/Jupyter/: IPythonDryrunExecutionWidget.py  JupyterButtonRowWidget.py  JupyterImageNavigatorWidget.py  PhoObjectBrowser_JupyterWidget.py  TreeWidget.py  ipython_widget_helpers.py  simple_widgets.py
src/pyphocorehelpers/gui/PyVista/: CascadingDynamicPlotsList.py  PhoCustomVtkWidgets.py
src/pyphocorehelpers/gui/Qt/: AttrsPyQt.py  ExceptionPrintingSlot.py  GlobalConnectionManager.py  HighlightedJumpSlider.py  Param_to_PyQt_Binding.py  QtUIC_Helpers.py  SyncedTimelineWindowLink.py  ToggleButton.py  TopLevelWindowHelper.py  color_helpers.py  connections_container.py  pandas_model.py  qevent_lookup_helpers.py  table_helpers.py  testLogFileViewer.py  tree_helpers.py  widget_positioning_helpers.py
src/pyphocorehelpers/mixins/: OptionsListMixin.py  auto_registering.py  gettable_mixin.py  key_value_hashable.py  member_enumerating.py  serialized.py
src/pyphocorehelpers/pho_jupyter_preview_widget/: display_helpers.py  ipython_helpers.py  widget.py
src/pyphocorehelpers/plotting/: background_helpers.py  figure_management.py  filesystem_figure_operations.py  hairy_lines_plot.py  historical_results.py  image_plotting_helpers.py  media_output_helpers.py  pyqtplot_basic.py  vedo_qt_helpers.py  video_output_helpers.py
src/pyphocorehelpers/scripts/: export_subrepos.py  programmatically_modiffy_ui_file.py
templating/: base_pyproject.toml_fragment.toml  pyproject_template.toml_template.toml  pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment
tests/: conftest.py  test_assertion_helpers.py  test_dynamic_parameters.py  test_indexing_helpers.py  test_print_helpers.py  test_skeleton.py
typings/pyphocorehelpers/: assertion_helpers.pyi  exception_helpers.pyi  function_helpers.pyi  general_helpers.pyi  geometry_helpers.pyi  hashing_helpers.pyi  image_helpers.pyi  indexing_helpers.pyi  ipython_helpers.pyi  notebook_helpers.pyi  performance_timing_helpers.pyi  pprint.pyi  preferences_helpers.pyi  print_helpers.pyi  programming_helpers.pyi  pyqt_ipython_rendering_helpers.pyi
typings/pyphocorehelpers/DataStructure/: data_structure_builders.pyi  dynamic_parameters.pyi  enum_helpers.pyi
typings/pyphocorehelpers/Filesystem/: metadata_helpers.pyi  path_helpers.pyi
typings/pyphocorehelpers/plotting/: media_output_helpers.pyi
(+12 files in other folders)
