[tool.poetry]
name = "pyphocorehelpers"
version = "0.2.0"
description = "A collection of generally useful python code by Pho Hale"
authors = ["Pho Hale <CommanderPho@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
objsize = "^0.6.1"
indexed = "^1.3.0"
h5py = "^3.8.0"
numpy = "^1.23.2"
pandas = "^1.5.1"
ansi2html = {git = "https://github.com/CommanderPho/ansi2html.git"} # ansi2html = "^1.8.0"
importlib-metadata = "^6.0.0" 
numba = {version = "^0.56.4", optional = true}
pyvista = "0.36.*"
matplotlib = "^3.6.3"
vedo = {git = "https://github.com/CommanderPho/vedo.git", rev = "release/pho-working"}
hdf5plugin = "^4.1.1"
silx = "^1.1.2"
vtk = "<9.1.0"
PyQt5Singleton = { version = "^0.1", optional = true}
QtPy = { version = "^2.1.0", optional = true}
PyQt5-sip = { version = "^12.11.1", optional = true}
handsdown = "^2.0.1"

[tool.poetry.group.remote.dependencies]
neuropy = {path = "../NeuroPy", develop=true}

[tool.poetry.extras]
accel = ["numba"]
vizqt = ["PyQt5Singleton", "QtPy", "PyQt5-sip"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# , extras=["all"]