[tool.poetry]
name = "pyphocorehelpers"
version = "0.3.1"
description = "A collection of generally useful python code by Pho Hale"
authors = ["Pho Hale <CommanderPho@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
objsize = "^0.6.1"
indexed = "^1.3.0"
h5py = "^3.8.0"
numpy = "^1.23.2"
pandas = "1.5.3"
ansi2html = "^1.8.0"
numba = "^0.56.4"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-matplotlib = "^0.10.1"
mkdocs-jupyter = "^0.24.6"
mkdocstrings = {extras = ["python"], version = "^0.24"}
mkdocstrings-python = "^1.9"
cairosvg = "^2.7.1"

[tool.poetry.group.dev.dependencies]
importlib-metadata = "^6.0.0"


[tool.poetry.group.viz.dependencies]
pyvista = "^0.38.0"
matplotlib = "^3.6.3"
vedo = {git = "https://github.com/CommanderPho/vedo.git", rev = "release/pho-working"}
hdf5plugin = "^4.1.1"
silx = "^1.1.2"
vtk = "<9.1.0"
PyQt5Singleton = { version = "^0.1", optional = true}
QtPy = { version = "^2.1.0", optional = true}
PyQt5-sip = { version = "^12.11.1", optional = true}
handsdown = "^2.0.1"

[tool.poetry.group.remote.dependencies]
neuropy = {path = "../NeuroPy", develop=true}






















[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# , extras=["all"]