[project]
name = "pyphocorehelpers"
version = "0.4.0"
description = "A collection of generally useful python code by Pho Hale"
authors = [{ name = "Pho Hale", email = "CommanderPho@users.noreply.github.com" }]
requires-python = ">=3.9,<3.12"
readme = "README.md"
dependencies = [
    "objsize>=0.6.1,<0.7",
    "indexed>=1.3.0,<2",
    "h5py>=3.8.0,<4",
    "numpy>=1.23.2,<2",
    "pandas==1.5.3",
    "ansi2html>=1.8.0,<2",
    "numba>=0.56.4,<0.57",
    "mkdocs-gen-files>=0.5.0,<0.6",
    "mkdocs-literate-nav>=0.6.1,<0.7",
    "mkdocs-section-index>=0.3.8,<0.4",
    "mkdocs-matplotlib>=0.10.1,<0.11",
    "mkdocs-jupyter>=0.24.6,<0.25",
    "mkdocstrings[python]>=0.24,<0.25",
    "mkdocstrings-python~=1.9",
    "cairosvg>=2.7.1,<3",
    "pyjsoncanvas",
]

[dependency-groups]
dev = ["importlib-metadata>=6.0.0,<7"]
viz = [
    "pyvista>=0.38.0,<0.39",
    "matplotlib>=3.6.3,<4",
    "vedo",
    "hdf5plugin>=4.1.1,<5",
    "silx>=1.1.2,<2",
    "vtk<9.1.0",
    "PyQt5Singleton>=0.1,<0.2",
    "QtPy>=2.1.0,<3",
    "PyQt5-sip>=12.11.1,<13",
]
remote = ["neuropy"]

[tool.uv]
default-groups = [
    "dev",
    "viz",
    "remote",
]

[tool.uv.sources]
vedo = { git = "https://github.com/CommanderPho/vedo.git", rev = "release/pho-working" }
neuropy = { path = "../NeuroPy", editable = true }
pyjsoncanvas = { git = "https://github.com/CommanderPho/PyJSONCanvas.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

